tests/NormalTests/paczka1/fuzzy1/29517181.err
Error in line 3: Z43jEZm4k3 A860 72,3
Error in line 5: zBrBBDCjQqf A324 92,2
Error in line 8: Z43jEZm4k3 A324 57,0
Error in line 6: XhmRQ4h8qTb A324 86,0
Error in line 9: zBrBBDCjQqf A884 52,3
Error in line 10: Z43jEZm4k3 A860 77,1
Error in line 12: S124 A324 72,5
Error in line 17: S124 S124 50,8
